# trafilatura

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
lib/: index.d.ts  index.js  index.test.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: convert.rs  lib.rs  types.rs
